<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nextFocusRight="@id/blfNavBar" />

    <androidx.leanback.widget.BrowseFrameLayout
        android:id="@+id/blfNavBar"
        android:layout_width="wrap_content"
        android:paddingHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:nextFocusLeft="@id/container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/search"
                android:gravity="center_vertical"
                android:drawablePadding="16dp"
                android:focusable="true"
                android:background="@drawable/selector_menu"
                android:textColor="@color/text_selector_white_grey"
                app:drawableLeftCompat="@drawable/ic_search" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_home"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:text="@string/home"
                android:drawablePadding="16dp"
                android:layout_height="45dp"
                android:background="@drawable/selector_menu"
                android:textColor="@color/text_selector_white_grey"
                android:focusable="true"
                app:drawableLeftCompat="@drawable/ic_home" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_movies"
                android:layout_width="match_parent"
                android:drawableStart="@drawable/ic_movie"
                
                android:gravity="center_vertical"
                android:drawablePadding="16dp"
                android:text="@string/movies"
                android:layout_height="45dp"
                android:focusable="true"
                android:background="@drawable/selector_menu"
                android:textColor="@color/text_selector_white_grey"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_tv"
                android:layout_width="match_parent"
                android:drawableStart="@drawable/ic_tv"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:drawablePadding="16dp"
                android:text="@string/tv"
                android:focusable="true"
                android:background="@drawable/selector_menu"
                android:textColor="@color/text_selector_white_grey"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_sports"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:drawablePadding="16dp"
                android:text="@string/sports"
                android:focusable="true"
                android:background="@drawable/selector_menu"
                android:textColor="@color/text_selector_white_grey"
                app:drawableLeftCompat="@drawable/ic_sports" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_settings"
                android:layout_width="match_parent"
                android:layout_marginTop="32dp"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:drawablePadding="16dp"
                android:text="@string/settings"
                android:focusable="true"
                android:background="@drawable/selector_menu"
                android:textColor="@color/text_selector_white_grey"
                app:drawableLeftCompat="@drawable/ic_settings" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_language"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:drawablePadding="16dp"
                android:text="@string/language"
                android:focusable="true"
                android:background="@drawable/selector_menu"
                android:textColor="@color/text_selector_white_grey"
                app:drawableLeftCompat="@drawable/ic_language" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_genre"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:drawablePadding="16dp"
                android:text="@string/genre"
                android:focusable="true"
                android:background="@drawable/selector_menu"
                android:textColor="@color/text_selector_white_grey"
                app:drawableLeftCompat="@drawable/ic_genre" />

        </LinearLayout>


    </androidx.leanback.widget.BrowseFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>