<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#282828">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".075" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".055" />

        <include
            layout="@layout/banner_image"
            android:id="@+id/banner_layout"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            tools:text="Avatar : The way of water"
            android:textColor="@color/color_white"
            android:textSize="26sp"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/guideline_top"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".42" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            tools:text="Avatar : The way of water"
            android:textColor="@color/color_white"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".42" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:lineSpacingMultiplier="1.2"
            android:maxLines="3"
            tools:text="Avatar : The way of water"
            android:textColor="@color/color_white"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/subtitle"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".42" />

        <TextView
            android:id="@+id/show_more"
            app:layout_constraintStart_toEndOf="@+id/description"
            app:layout_constraintBottom_toBottomOf="@+id/description"
            android:nextFocusDown="@id/play"
            android:textColor="@color/color_white"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/show_more"
            android:textSize="13sp"
            android:padding="1dp"
            android:background="@drawable/btn_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_selector"
            android:drawablePadding="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:focusedByDefault="true"
            android:nextFocusDown="@id/more_like_this"
            android:padding="8dp"
            android:text="@string/play"
            android:textColor="@color/color_white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".3"
            app:drawableLeftCompat="@drawable/ic_play" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/more_like_this"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_selector"
            android:drawablePadding="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:focusedByDefault="true"
            android:nextFocusDown="@id/add_to_mylist"
            android:padding="8dp"
            android:text="@string/more_like_this"
            android:textColor="@color/color_white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/play"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".3"
            app:drawableLeftCompat="@drawable/ic_more" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/add_to_mylist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_selector"
            android:drawableStart="@drawable/ic_more"
            android:drawablePadding="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:focusedByDefault="true"
            android:padding="8dp"
            android:text="@string/add_to_my_list"
            android:textColor="@color/color_white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/more_like_this"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
